syntax = "proto3";

package pb;
import "google/protobuf/timestamp.proto";
import "barber.proto";


option go_package = "barbershop/pb";

message UpdateBarberRequest {
    string barber_id = 1;
    optional string shop_id = 2;
    optional string nickname = 3;
    optional string full_name = 4;
    optional string phone = 5;
    optional string email = 6;
    optional int32 gender = 7;
    optional string password = 8;
    optional string avatar = 9;
    optional int32 status = 10;
    optional google.protobuf.Timestamp password_changed_at = 11;
    google.protobuf.Timestamp update_at = 12;
}

message UpdateBarberResponse {
    Barber barber = 1;
}
